# data-science-for-esm

./: .buildinfo  .gitignore  .pre-commit-config.yaml  01-workshop-python-solution.html  01-workshop-python.html  02-workshop-numpy-solution.html  02-workshop-numpy.html  03-workshop-pandas-solution.html  03-workshop-pandas.html  04-workshop-geopandas-solution.html  04-workshop-geopandas.html  05-workshop-pysheds.html  05-workshop-xarray.html  06-workshop-atlite.html  07-workshop-networkx.html  08-workshop-pyomo.html  09-workshop-pypsa.html  10-workshop-pypsa-cem.html  11-workshop-groupwork.html  12-workshop-pypsa-sector-coupling.html  13-workshop-interactive-visualisation-cleared.html  13-workshop-interactive-visualisation.html  14-workshop-linopy.html  CONTRIBUTING.md  LICENSE  README.md  content.html  environment.yaml  genindex.html  intro.html  markdown.html  myst.yml  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.devcontainer/: devcontainer.json
_sources/: 01-workshop-python-solution.ipynb  01-workshop-python.ipynb  02-workshop-numpy.ipynb  03-workshop-pandas-solution.ipynb  03-workshop-pandas.ipynb  04-workshop-geopandas-solution.ipynb  04-workshop-geopandas.ipynb  05-workshop-pysheds.ipynb  05-workshop-xarray.ipynb  06-workshop-atlite.ipynb  07-workshop-networkx.ipynb  08-workshop-pyomo.ipynb  09-workshop-pypsa.ipynb  10-workshop-pypsa-cem.ipynb  11-workshop-groupwork.ipynb  12-workshop-pypsa-sector-coupling.ipynb  13-workshop-interactive-visualisation-cleared.ipynb  13-workshop-interactive-visualisation.ipynb  intro.md  (+1 more)
(+97 files in other folders)
